# AZ-Queue-Manager

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  test_json_in.json
.devcontainer/: devcontainer.json  setup.sh
azqueuemanager/: __init__.py  extension.py  queue.py
extensions/: json.py
src/: __init__.py  storage.py
